objects/Case.object
<CustomObject>
    <fields>
        <fullName>CaseAgeBusinessDays__c</fullName>
        <description>SFDC-237 Case Age (Business Days)</description>
        <formula>If(IsNull(DateCaseLastOpened__c),

(If(IsNull(ClosedDate),
CASE(MOD(DateValue(CreatedDate)-DATE(1985,6,24),7),0,
CASE(MOD(Today()-DateValue(CreatedDate),7),1,2,2,3,3,4,4,5,5,5,6,5,1),1,
CASE(MOD(Today()-DateValue(CreatedDate),7),1,2,2,3,3,4,4,4,5,4,6,5,1),2,
CASE(MOD(Today()-DateValue(CreatedDate),7),1,2,2,3,3,3,4,3,5,4,6,5,1),3,
CASE(MOD(Today()-DateValue(CreatedDate),7),1,2,2,2,3,2,4,3,5,4,6,5,1),4,
CASE(MOD(Today()-DateValue(CreatedDate),7),1,1,2,1,3,2,4,3,5,4,6,5,1),5,
CASE(MOD(Today()-DateValue(CreatedDate),7),1,0,2,1,3,2,4,3,5,4,6,5,0),6,
CASE(MOD(Today()-DateValue(CreatedDate),7),1,1,2,2,3,3,4,4,5,5,6,5,0),999)
+(FLOOR((Today()-DateValue(CreatedDate))/7)*5-1),
CASE(MOD(DateValue(CreatedDate)-DATE(1985,6,24),7),0,
CASE(MOD(DateValue(ClosedDate)-DateValue(CreatedDate),7),1,2,2,3,3,4,4,5,5,5,6,5,1),1,
CASE(MOD(DateValue(ClosedDate)-DateValue(CreatedDate),7),1,2,2,3,3,4,4,4,5,4,6,5,1),2,
CASE(MOD(DateValue(ClosedDate)-DateValue(CreatedDate),7),1,2,2,3,3,3,4,3,5,4,6,5,1),3,
CASE(MOD(DateValue(ClosedDate)-DateValue(CreatedDate),7),1,2,2,2,3,2,4,3,5,4,6,5,1),4,
CASE(MOD(DateValue(ClosedDate)-DateValue(CreatedDate),7),1,1,2,1,3,2,4,3,5,4,6,5,1),5,
CASE(MOD(DateValue(ClosedDate)-DateValue(CreatedDate),7),1,0,2,1,3,2,4,3,5,4,6,5,0),6,
CASE(MOD(DateValue(ClosedDate)-DateValue(CreatedDate),7),1,1,2,2,3,3,4,4,5,5,6,5,0),999)
+(FLOOR((DateValue(ClosedDate)-DateValue(CreatedDate))/7)*5-1))),
(
If(IsNull(ClosedDate),
CASE(MOD(DateValue(CreatedDate)-DATE(1985,6,24),7),0,
CASE(MOD(Today()-DateValue(DateCaseLastOpened__c),7),1,2,2,3,3,4,4,5,5,5,6,5,1),1,
CASE(MOD(Today()-DateValue(DateCaseLastOpened__c),7),1,2,2,3,3,4,4,4,5,4,6,5,1),2,
CASE(MOD(Today()-DateValue(DateCaseLastOpened__c),7),1,2,2,3,3,3,4,3,5,4,6,5,1),3,
CASE(MOD(Today()-DateValue(DateCaseLastOpened__c),7),1,2,2,2,3,2,4,3,5,4,6,5,1),4,
CASE(MOD(Today()-DateValue(DateCaseLastOpened__c),7),1,1,2,1,3,2,4,3,5,4,6,5,1),5,
CASE(MOD(Today()-DateValue(DateCaseLastOpened__c),7),1,0,2,1,3,2,4,3,5,4,6,5,0),6,
CASE(MOD(Today()-DateValue(DateCaseLastOpened__c),7),1,1,2,2,3,3,4,4,5,5,6,5,0),999)
+(FLOOR((Today()-DateValue(DateCaseLastOpened__c))/7)*5-1),
CASE(MOD(DateValue(CreatedDate)-DATE(1985,6,24),7),0,
CASE(MOD(DateValue(ClosedDate)-DateValue(DateCaseLastOpened__c),7),1,2,2,3,3,4,4,5,5,5,6,5,1),1,
CASE(MOD(DateValue(ClosedDate)-DateValue(DateCaseLastOpened__c),7),1,2,2,3,3,4,4,4,5,4,6,5,1),2,
CASE(MOD(DateValue(ClosedDate)-DateValue(DateCaseLastOpened__c),7),1,2,2,3,3,3,4,3,5,4,6,5,1),3,
CASE(MOD(DateValue(ClosedDate)-DateValue(DateCaseLastOpened__c),7),1,2,2,2,3,2,4,3,5,4,6,5,1),4,
CASE(MOD(DateValue(ClosedDate)-DateValue(DateCaseLastOpened__c),7),1,1,2,1,3,2,4,3,5,4,6,5,1),5,
CASE(MOD(DateValue(ClosedDate)-DateValue(DateCaseLastOpened__c),7),1,0,2,1,3,2,4,3,5,4,6,5,0),6,
CASE(MOD(DateValue(ClosedDate)-DateValue(DateCaseLastOpened__c),7),1,1,2,2,3,3,4,4,5,5,6,5,0),999)
+(FLOOR((DateValue(ClosedDate)-DateValue(DateCaseLastOpened__c))/7)*5-1))
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age (Business Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseID18Character__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseID 18 Character</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseRecordName__c</fullName>
        <description>SFDC - 184 - Implementation: &apos;case record type&apos; field should be made read only</description>
        <formula>RecordType.Name</formula>
        <inlineHelpText>Field to Check Record Type Name</inlineHelpText>
        <label>Case Record Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-309 Lookup to Case</description>
        <inlineHelpText>This value will be populated when spawned from a case</inlineHelpText>
        <label>Case Reference</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases (Case Reference)</relationshipLabel>
        <relationshipName>CaseReferenceCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseRejectionPastDue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Rejection Past Due</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseSource__c</fullName>
        <description>SFDC-3004 New field for OMDH case</description>
        <label>Case Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Cash applications</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChannelPartnerBP__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Channel Partner BP #</inlineHelpText>
        <label>Channel Partner BP #</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChannelPartnerCompanyName__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Channel Partner Company Name</inlineHelpText>
        <label>Channel Partner Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckHoliday__c</fullName>
        <description>SFDC1-5154 This field helps calculate if current date falls under a holiday</description>
        <formula>IF(OR(AND(DAY(TODAY())=25,MONTH(TODAY())=12),AND(DAY(TODAY())=1,MONTH(TODAY())=1)),&quot;Please note that due to the holiday season that there may be a delay in responding to your request.&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CheckHoliday</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>SFDC1-965 SFDC1-683 City field for new Account creation through Case</description>
        <inlineHelpText>City for new Account creation through Case</inlineHelpText>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClosedReason__c</fullName>
        <description>SFDC1-251 Closed reason for when the case gets closed.</description>
        <inlineHelpText>Please populate the reason for case closure.</inlineHelpText>
        <label>Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completeness</fullName>
                </value>
                <value>
                    <fullName>Consistency</fullName>
                </value>
                <value>
                    <fullName>Correctness</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Customer Usage Error</fullName>
                </value>
                <value>
                    <fullName>Data Republished</fullName>
                </value>
                <value>
                    <fullName>Documentation Provided</fullName>
                </value>
                <value>
                    <fullName>Documentation Updated</fullName>
                </value>
                <value>
                    <fullName>Duplicates</fullName>
                </value>
                <value>
                    <fullName>Expected Behavior</fullName>
                </value>
                <value>
                    <fullName>Fixed in New Version</fullName>
                </value>
                <value>
                    <fullName>General Question</fullName>
                </value>
                <value>
                    <fullName>Incident Resolved</fullName>
                </value>
                <value>
                    <fullName>Issue on Client Side</fullName>
                </value>
                <value>
                    <fullName>Known Issue/Bug</fullName>
                </value>
                <value>
                    <fullName>No Action Required</fullName>
                </value>
                <value>
                    <fullName>Outage Resolved</fullName>
                </value>
                <value>
                    <fullName>Permissions Updated</fullName>
                </value>
                <value>
                    <fullName>Product Limitation</fullName>
                </value>
                <value>
                    <fullName>Query Answered</fullName>
                </value>
                <value>
                    <fullName>Referred to Sales</fullName>
                </value>
                <value>
                    <fullName>Resolution Steps Provided</fullName>
                </value>
                <value>
                    <fullName>Technical Issue</fullName>
                </value>
                <value>
                    <fullName>Training Provided</fullName>
                </value>
                <value>
                    <fullName>Workaround Provided</fullName>
                </value>
                <value>
                    <fullName>Referred to Training</fullName>
                </value>
                <value>
                    <fullName>Data Corrected</fullName>
                </value>
                <value>
                    <fullName>Data Corrected.</fullName>
                    <isActive>false</isActive>
                    <label>Data Corrected.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ComplianceRestrictions__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Compliance Restrictions</inlineHelpText>
        <label>Compliance Restrictions</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactAccount__c</fullName>
        <description>SFDC-5693 Customer Experience</description>
        <formula>Contact.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactAttempts__c</fullName>
        <description>SFDC1-88 Number of attempts made to contact</description>
        <label>Contact Attempts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContactBL__c</fullName>
        <description>SFDC1-6009: This field contains Contact Business Line</description>
        <formula>$User.HRBusinessLine__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact BL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactCountryCode__c</fullName>
        <description>SFDC1-7970 hidden Country Code field from the Case Contact - being used in Convert to Lead quick action</description>
        <formula>TEXT(Contact.MailingCountryCode)</formula>
        <label>Contact Country/Territory Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactEmail1__c</fullName>
        <description>SFDC-2287 Account Governance New Account Request additional fields</description>
        <inlineHelpText>to enter non-existing contact email</inlineHelpText>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <description>SFDC1-2650 : This field will hold the Contact Email from Contact, used in Email Templates.</description>
        <formula>Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMailingAddress__c</fullName>
        <description>SFDC1-2650 : This field will hold the Contact Mailing Address from Contact, used in Email Templates.</description>
        <formula>Contact.MailingStreet + BR() + Contact.MailingCity + &apos;, &apos;  + Contact.MailingState + &apos; &apos; + Contact.MailingPostalCode + BR() + 
 Contact.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMailingCity__c</fullName>
        <description>SFDC1-10142 Read-only field, used for populating Mailing City for Request New Account case from Customer Care case.</description>
        <formula>Contact.MailingCity</formula>
        <inlineHelpText>Read-only field, used for populating Mailing City for Request New Account case from Customer Care case.</inlineHelpText>
        <label>Contact Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMailingCountry__c</fullName>
        <description>SFDC1-10142 Read-only field, used for populating Contact Mailing Country for Request New Account case from Customer Care case.</description>
        <formula>Contact.MailingCountry</formula>
        <inlineHelpText>Read-only field, used for populating Contact Mailing Country/Territory for Request New Account case from Customer Care case.</inlineHelpText>
        <label>Contact Mailing Country/Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMailingPostalCode__c</fullName>
        <description>SFDC1-10142 Read-only field, used for populating Mailing Postal Code for Request New Account case from Customer Care case.</description>
        <formula>Contact.MailingPostalCode</formula>
        <inlineHelpText>Read-only field, used for populating Mailing Postal Code for Request New Account case from Customer Care case.</inlineHelpText>
        <label>Contact Mailing Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMailingStateProvince__c</fullName>
        <description>SFDC1-10142 Read-only field, displays Contact Mailing State/Province for Request New Account case from Customer Care case.</description>
        <formula>Contact.MailingState</formula>
        <inlineHelpText>Read-only field, displays Contact Mailing State/Province for Request New Account case from Customer Care case.</inlineHelpText>
        <label>Contact Mailing State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMailingStreet__c</fullName>
        <description>SFDC1-10142 Read-only field, used for populating Street Address for Request New Account case from Customer Care case.</description>
        <formula>Contact.MailingStreet</formula>
        <inlineHelpText>Read-only field, used for populating Street Address for Request New Account case from Customer Care case.</inlineHelpText>
        <label>Contact Mailing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactManager__c</fullName>
        <description>SFDC1-6009: This field contains Contact Manager</description>
        <formula>$User.HRManager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <description>SFDC-2287 Account Governance New Account Request additional fields</description>
        <inlineHelpText>to enter contact name without having to use a contact lookup</inlineHelpText>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPhone__c</fullName>
        <description>SFDC1-2650 : This field will hold the Contact Phone from Contact, used in Email Templates.</description>
        <formula>Contact.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-6009: Contact Reference field holds contact reference</description>
        <label>Contact Reference</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactRegion__c</fullName>
        <description>SFDC1-6009: This field contains Contact Region</description>
        <formula>TEXT($User.UserRegion__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactStateProvinceCode__c</fullName>
        <description>SFDC1-7970 hidden State/Province Code field from the Case Contact - being used in Convert to Lead quick action</description>
        <formula>TEXT(Contact.MailingStateCode)</formula>
        <inlineHelpText>Read-only field, used for populating Mailing State/Province Code for Request New Account case from Customer Care case.</inlineHelpText>
        <label>Contact State/Province Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactSurname__c</fullName>
        <description>SFDC-4144 Data Lake field</description>
        <label>Contact Surname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-251 A checkbox used to have the user confirm that the contact is an internal contact (contains @ihsmarkit.com email)
SFDC1- 7772 Checkbox should be unchecked</description>
        <inlineHelpText>Please tick this box if the associated contact is internal (Someone@IhsMarkit.com)</inlineHelpText>
        <label>Contact Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContinuationEndDate__c</fullName>
        <description>SFDC1-10379 : This field will hold the value of Continuation End Date from Renewal Opportunity</description>
        <inlineHelpText>Continuation End Date from Renewal Opportunity</inlineHelpText>
        <label>Continuation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractEndDate__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Contract End Date</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractOwnerRegion__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Contract Owner Region</inlineHelpText>
        <label>Contract Owner Region</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractProductList__c</fullName>
        <description>SFDC1-593 This field is concatenated list of Products from the list of Contracts</description>
        <label>Contract Product List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContractRecordType__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Contract Record Type</inlineHelpText>
        <label>Contract Record Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-6009: This field contains Contact Reference</description>
        <label>Contract Reference</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Cases (Contract Reference)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractStage__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Contract Stage</inlineHelpText>
        <label>Contract Stage</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStartDate__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Contract Start Date</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-88 This field represents SAP Contract Number(s)</description>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CountOfAdditionalCaseFields__c</fullName>
        <description>SFDC1-652  Counting the number of Additional Case Fields related to the case. To prevent users from associating more than one product per case.</description>
        <inlineHelpText>Counting the number of Additional Case Fields related to the case. To prevent users from associating more than one product per case.</inlineHelpText>
        <label>CountOfAdditionalCaseFields</label>
        <summaryForeignKey>AdditionalCaseFields__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-965 &amp; SFDC1-638 Country field for new Account creation through Case</description>
        <inlineHelpText>Country/Territory for new Account creation through Case</inlineHelpText>
        <label>Country/Territory</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreditRebill__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6148: This field will hold the value of &quot;Is this a credit/re-bill&quot;
SFDC1-6250: Change field&apos;s name and API name per Bhanu&apos;s request</description>
        <label>Credit/Re-bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentQueue__c</fullName>
        <description>SFDC1-5943, To store the queue name the case is in. Will be populated via workflow.</description>
        <label>Current Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerCareInitiated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-2005 Check if this Internal Partner case was created by the Customer Care team</description>
        <label>Customer Care Initiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerInternalReference__c</fullName>
        <description>SFDC-2968 allowing customers to reference tickets by reference numbers.</description>
        <label>Customer Internal Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <description>SFDC-3510 priority field to tag cases for IHS Markit&apos;s own priority regardless of customer priority</description>
        <inlineHelpText>Set the priority of the case as requested by the customer</inlineHelpText>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateCaseLastOpened__c</fullName>
        <description>SFDC-5530 -  Response Management Process Optimization - Case</description>
        <label>Date Case Last Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DaysSinceCaseLastModified__c</fullName>
        <description>SFDC-3511.Shows Days passed since Case was Last Modified . Case Comments and Email are also considered while calculating the Value.</description>
        <formula>IF (
	CONTAINS( Text(Status) , &apos;Closed&apos;),
	0,
	IF (
		NOT(ISBLANK(LastModifiedDateForRelatedData__c)),
		TODAY()-DATEVALUE(LastModifiedDateForRelatedData__c), 
		TODAY()-DATEVALUE(LastModifiedDate )
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Case Last Modified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeliveryCaseComments__c</fullName>
        <description>SFDC1-7122: Rename the &quot;Delivery Resolution Description&quot; field TO &quot;Delivery Case Comments&quot;</description>
        <inlineHelpText>Add Concise Overveiw</inlineHelpText>
        <label>Delivery Case Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DeliveryRootCause__c</fullName>
        <description>SFDC1-6250 Dependent picklist (controlling field is &quot;Loading Group Name&quot;)
SFDC1-6944: Reorder the picklist values</description>
        <label>Delivery Root Cause</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Delivery Issue</fullName>
                </value>
                <value>
                    <fullName>Access Issue</fullName>
                </value>
                <value>
                    <fullName>Account Maintenance</fullName>
                </value>
                <value>
                    <fullName>Admin Request</fullName>
                </value>
                <value>
                    <fullName>Bespoke Data</fullName>
                </value>
                <value>
                    <fullName>Bitlock Issue</fullName>
                </value>
                <value>
                    <fullName>Bulk Change</fullName>
                </value>
                <value>
                    <fullName>Bulk Change / Update</fullName>
                </value>
                <value>
                    <fullName>Change of Address</fullName>
                </value>
                <value>
                    <fullName>Company Management</fullName>
                </value>
                <value>
                    <fullName>Connect Issue</fullName>
                </value>
                <value>
                    <fullName>Contents of a Copyright Document</fullName>
                </value>
                <value>
                    <fullName>Continuation processed</fullName>
                </value>
                <value>
                    <fullName>Corrupt CD/DVD</fullName>
                </value>
                <value>
                    <fullName>Corrupt Delivery</fullName>
                </value>
                <value>
                    <fullName>Custom Collections</fullName>
                </value>
                <value>
                    <fullName>Data Issue</fullName>
                </value>
                <value>
                    <fullName>Delivery not Received</fullName>
                </value>
                <value>
                    <fullName>Document Issue</fullName>
                </value>
                <value>
                    <fullName>Dongle Issue</fullName>
                </value>
                <value>
                    <fullName>DVD Request</fullName>
                </value>
                <value>
                    <fullName>EDIN Issue</fullName>
                </value>
                <value>
                    <fullName>Enerdeq Issue</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>Entitlement Maintenance</fullName>
                </value>
                <value>
                    <fullName>Errors on page within GRDD</fullName>
                </value>
                <value>
                    <fullName>ETA for Backorder</fullName>
                </value>
                <value>
                    <fullName>Feature Keys</fullName>
                </value>
                <value>
                    <fullName>GDS/GCS Issue</fullName>
                </value>
                <value>
                    <fullName>HS Code/Country Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeliveryTeamOnboarding__c</fullName>
        <description>SFDC1-7137: Creating Formula field for Implementation record type. Since there exists another field as Delivery Team, creating new field with same label, but different API</description>
        <formula>LoadingGroupOnboarding__r.DeliveryTeam__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryTeam__c</fullName>
        <description>SFDC1-6148: This field will hold the Delivery Team values
SFDC1-6944: Reorder the picklist values
SFDC1-6995: Configure field dependencies - if Team Select = Retail, only RETAIL values are available in Delivery Team</description>
        <label>Delivery Team</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TeamSelect__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agri Connect</fullName>
                </value>
                <value>
                    <fullName>Agri SAM</fullName>
                </value>
                <value>
                    <fullName>Auto Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Calgary Licensing</fullName>
                </value>
                <value>
                    <fullName>CD Distribution</fullName>
                </value>
                <value>
                    <fullName>Chemical Deliverables</fullName>
                </value>
                <value>
                    <fullName>CI Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Delivery Technical</fullName>
                </value>
                <value>
                    <fullName>EMEA Physical Delivery</fullName>
                </value>
                <value>
                    <fullName>Englewood Physical Delivery</fullName>
                </value>
                <value>
                    <fullName>Erights</fullName>
                </value>
                <value>
                    <fullName>Experts Portal</fullName>
                </value>
                <value>
                    <fullName>Fekete Order Fulfillment</fullName>
                </value>
                <value>
                    <fullName>GIS Delivery</fullName>
                </value>
                <value>
                    <fullName>Global Delivery EMEA ADandM</fullName>
                </value>
                <value>
                    <fullName>Global Delivery Help Desk</fullName>
                </value>
                <value>
                    <fullName>Global Insight Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Goldfire Order Fulfillment</fullName>
                </value>
                <value>
                    <fullName>GTA Order Fulfillment</fullName>
                </value>
                <value>
                    <fullName>JOC Order Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Kingdom Licensing</fullName>
                </value>
                <value>
                    <fullName>Macro Economic Advisors</fullName>
                </value>
                <value>
                    <fullName>ODSP Orders</fullName>
                </value>
                <value>
                    <fullName>Online Delivery</fullName>
                </value>
                <value>
                    <fullName>OPIS Delivery</fullName>
                </value>
                <value>
                    <fullName>Order Entitlements EM</fullName>
                </value>
                <value>
                    <fullName>Order Entitlements UK</fullName>
                </value>
                <value>
                    <fullName>PETRA Licensing</fullName>
                </value>
                <value>
                    <fullName>Premier Order Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Product Design</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DevelopmentSystemID__c</fullName>
        <description>SFDC1-251 This field contains the ID of the issue item associated with this case.</description>
        <inlineHelpText>Please populate System ID where applicable.</inlineHelpText>
        <label>Development System ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>